# traderdaddy-bridge

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
assets/: index-9BzVldNw.js  index-D2g7Y--t.js  index-nFV7enTx.css
docs/: tradier-mcp.md
engine/: README.md  __init__.py  contract.py  convert_ibkr_algo.py  convert_onboarding.py  demo_algo.py  fixtures.py  indicators.py  strategy.py
engine/adapters/: __init__.py  alpaca.py  databento.py  ibkr.py  massive.py  schwab.py  snaptrade.py  tastytrade.py  tradier_native.py
engine/tests/: test_conformance.py
mcp_server/: README.md  __init__.py  core.py  universal.py
server/: README.md  app.py  live_tradier.py
web/: index.html  package-lock.json  package.json  shot.mjs  tsconfig.json  vite.config.ts
web/src/: algo.ts  contract.ts  fixtures.ts  indicators.ts  main.ts  onboarding.ts  strategy.ts  theme.css
web/src/adapters/: index.ts
